Update traffic lights

--- a/wmg_new.latex
+++ b/wmg_new.latex
@@ -363,17 +363,17 @@ $if(beamer)$
     \usepackage{color}
 
     % traffic light system for materials
-    \definecolor{doworkgreen}{rgb}{0.13,0.69,0.30} % This is the color used for comments
+    \definecolor{doworkgreen}{rgb}{0.13,0.69,0.30}
     \definecolor{doworkyellow}{rgb}{1,0.79,0.06}
     \definecolor{doworkred}{rgb}{0.93,0.11,0.14}
 
     \newcommand{\difficultysection}[2]
     {
       \begin{tikzpicture}[remember picture, overlay]
-          \node[anchor=north east] at ([yshift=-0.27cm,xshift=-3.0cm]current page.north east)
+          \node[anchor=east] at ([yshift=-0.67cm,xshift=-3.0cm]current page.north east)
           {
             \begin{tikzpicture}[remember picture, overlay]
-              \node[fill,circle,minimum size=0.08\textheight,fill=#1,text=white,font=\bfseries] at (0,0) {#2};
+              \node[fill,circle,fill=#1,text=white,font=\bfseries,inner sep=3pt] at (0,0) {#2};
             \end{tikzpicture}
           };
       \end{tikzpicture}
