--- a/wmg_new.latex
+++ b/wmg_new.latex
@@ -367,16 +367,18 @@ $if(beamer)$
     \definecolor{doworkyellow}{rgb}{1,0.79,0.06}
     \definecolor{doworkred}{rgb}{0.93,0.11,0.14}
 
-    \newcommand{\difficultysection}[2]
-    {
-      \begin{tikzpicture}[remember picture, overlay]
+    % Only show difficultysection on left (main) slides, not on notes or right pages
+    \newcommand{\difficultysection}[2]{%
+      \only<1| handout:0>{%
+        \begin{tikzpicture}[remember picture, overlay]
           \node[anchor=east] at ([yshift=-0.67cm,xshift=-3.0cm]current page.north east)
           {
             \begin{tikzpicture}[remember picture, overlay]
-              \node[fill,circle,fill=#1,text=white,font=\bfseries,inner sep=3pt] at (0,0) {#2};
+              \node[fill,circle,fill=#1,text=white,font=\bfseries,inner sep=0pt,minimum size=0.08\textheight] at (0,0) {#2};
             \end{tikzpicture}
           };
-      \end{tikzpicture}
+        \end{tikzpicture}
+      }%
     }
 
     \newcommand{\passsection}{\difficultysection{doworkgreen}{C}}
